--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -363,6 +363,13 @@ width:100% !important;
     text-align: left;
 }
 
+.paragraph {
+    width: 80%;
+    padding-right: 10%;
+    padding-left: 10%;
+    
+}
+
 
 /* Sets the subtitles for the MGP page. width to 90% of webpage. Font size is set to 20px. Colour of text is white.
 background colour is set to #466A64. 10% padding left for formatting. */ 
